--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,7 +50,7 @@
             </div>
         </div>
         <%include footer.ejs%>
-
+            <script src="javascripts/script.js"></script>
 </body>
 
 </html>
