--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,6 +33,8 @@
             </div>
         </div>
         <%include footer.ejs%>
+            <script src="javascripts/script.js"></script>
+
 </body>
 
 </html>
