--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+    <!-- <div id="loading">
+        <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+    </div> -->
     <%include nav.ejs%>
         <div class="my-section">
 
@@ -57,6 +60,8 @@
             </div>
         </div>
         <%include footer.ejs%>
+            <script src="javascripts/script.js"></script>
+
 </body>
 
 </html>
