--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -461,3 +461,23 @@ a:hover {
     z-index: 1;
     transition: 5s;
 } */
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+    text-align: center;
+}
+
+#loading-image {
+    position: absolute;
+    top: 100px;
+    left: 240px;
+    z-index: 100;
+}
