--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -64,15 +64,14 @@
             <div class="project-container">
                 <div class="row project-section">
                     <div class="col-md-6 project-thumbnail-section">
-                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4">
+                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" target="_blank">
                             <div class="square project-1 animated fadeInUpShort delay-025s">
                             </div>
                         </a>
                     </div>
                     <div class="col-md-6 d-flex align-content-center flex-wrap title-section">
-                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" class="project-title animated fadeInUpTitle delay-05s">How we won the Facebook Developer Circles Innovation Challenge</a>
-                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" class="my-link arrow animated fadeInUp delay-05s">read more</a>
-
+                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" class="project-title animated fadeInUpTitle delay-05s" target="_blank">How we won the Facebook Developer Circles Innovation Challenge</a>
+                        <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" class="my-link arrow animated fadeInUp delay-05s" target="_blank">read more</a>
                     </div>
                 </div>
 
