--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -17,6 +17,8 @@
     <link href="stylesheets/animate.css" rel="stylesheet">
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
+    <link rel="preload" as="image" href="images/about.png">
+    <link rel="preload" as="image" href="images/hero.png">
     <script>
         window.onload = function() {
 
