--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -7,26 +7,29 @@
     <meta name="author" content="">
     <link rel="icon" href="/images/icon.png">
 
-    <title>Projects</title>
+    <title>TQDAT</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
     <link rel="preload" as="image" href="images/about.png">
     <link rel="preload" as="image" href="images/hero.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link href="stylesheets/style.css" rel="stylesheet">
     <link href="stylesheets/animate.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <!-- Nav tabs -->
     <div class="my-nav d-flex flex-md-row align-items-center bg-white border-bottom box-shadow justify-content-between">
+
         <a href="/" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
             <img src="/images/logo.png" class="my-logo">
         </a>
-        <ul class="nav">
+        <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
+
+        <ul class="nav navbar-options">
             <li class="nav-item">
                 <a class="nav-link p-2 navbar-p navbar-option active" data-toggle="tab" href="#home">Home</a>
             </li>
@@ -41,6 +44,24 @@
             </li>
         </ul>
     </div>
+    <div id="mySidebar" class="sidebar hamburger">
+        <ul class="nav d-flex align-items-end flex-column">
+            <li class="nav-item">
+                <a class="sidebar-option active" data-toggle="tab" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="sidebar-option" data-toggle="tab" href="#menu1">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="sidebar-option" data-toggle="tab" href="#menu2">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="sidebar-option" data-toggle="tab" href="#menu3">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <div id="myOverlay" class="overlay" onclick="openNav()">
+    </div>
 
     <!-- Tab panes -->
     <div class="tab-content">
@@ -53,7 +74,7 @@
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
                         <h1 class="last-name animated fadeInUp d-flex">TRƯƠNG</h1>
                         <h1 class="first-name last-name animated fadeInUp delay-025s">QUỐC ĐẠT</h1>
-                        <a href="/projects" class="my-link arrow animated fadeInUp delay-05s">my projects</a>
+                        <a href="" class="my-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my projects</a>
                     </div>
                 </div>
             </div>
@@ -102,9 +123,6 @@
 
         </div>
         <div id="menu2" class="tab-pane fade"><br>
-
-
-
             <div class="my-section">
                 <div class="container text-center">
                     <h2 class="animated animated fadeIn title">About me</h2>
@@ -153,6 +171,12 @@
             <%include footer.ejs%>
 
                 <script src="javascripts/script.js"></script>
+                <script>
+                    $('#to-project-button').click(function(e) {
+                        e.preventDefault();
+                        $('.nav a[href="#menu1"]').tab('show');
+                    })
+                </script>
         </div>
 
 </body>
