--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:image" content="/images/hero.png" />
+    <meta property="og:description" content="Hi, I'm Dat. I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a product designer. Besides, I have a special love for motion design. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps."
+    />
+    <meta property="og:title" content="Dat Truong" />
     <link rel="icon" href="/images/icon.png">
 
-    <title>TQDAT</title>
+    <title>Dat Truong</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
