--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -146,8 +146,8 @@
                                 <span class="green">Truong Quoc Dat</span>.
                             </p>
                             <p> I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span> or a
-                                <span class="green">web developer</span>. You can download my CV <a href="CV.pdf" class="green-link" download>here</a>.
-                                <br/><br/>Moreover, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
+                                <span class="green">web developer</span>. You can download my CV <a href="Dat-Truong-CV.pdf" class="green-link" download>here</a>.
+                                <br/><br/>Besides, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
                                 <br/><br/> Wish you a nice day!
                             </p>
                         </div>
