--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -146,7 +146,8 @@
                                 <span class="green">Truong Quoc Dat</span>.
                             </p>
                             <p> I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span> or a
-                                <span class="green">web developer</span>. You can download my CV <a href="Dat-Truong-CV.pdf" class="green-link" download>here</a>.
+                                <span class="green">web developer</span>. You can download my <a href="Dat-Truong-CV.pdf" class="green-link" download>CV</a> or my <a href="Dat-Truong-Graphic-portfolio.pdf" class="green-link" download>graphic design portfolio</a>.
+                                Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a> or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                                 <br/><br/>Besides, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
                                 <br/><br/> Wish you a nice day!
                             </p>
@@ -167,7 +168,7 @@
                 </div>
                 <div class="contact-section animated fadeIn delay-025s">
                     <p class="contact">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>.
-                        </br>Otherwise, check my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
+                        </br>Otherwise, check out my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
                         <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                     </p>
                 </div>
