--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -109,7 +109,7 @@
 
                     <div class="row project-section">
                         <div class="col-md-6 project-thumbnail-section">
-                            <a href="/projects/my-very-first-step-from-motion-design-to-ui-design" target="_blank">
+                            <a href="https://www.notion.so/New-look-new-story-xotours-vn-9a8bb78953cf41ff85e0612fb389298d" target="_blank">
                                 <div class="square project-2 animated fadeInUpShort delay-025s">
                                 </div>
                             </a>
