--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,3 @@
-<footer class="border-top text-center footer">
-    <p class="footer-text">DAT TRUONG</p>
-    <p class="footer-text">tqdat99@gmail.com</p>
+<footer class="text-center footer d-flex align-items-center justify-content-center">
+    <p class="footer-text">DAT TRUONG</br>tqdat99@gmail.com</p>
 </footer>
