--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -13,16 +13,17 @@
 
     <title>Dat Truong</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="images/project-1.jpg">
+    <!-- <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
     <link rel="preload" as="image" href="images/about.png">
-    <link rel="preload" as="image" href="images/hero.png">
+    <link rel="preload" as="image" href="images/hero.png"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link href="stylesheets/style.css" rel="stylesheet">
     <link href="stylesheets/animate.css" rel="stylesheet">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158794000-1"></script>
     <script>
@@ -38,9 +39,9 @@
 </head>
 
 <body>
-    <div class="my-nav d-flex flex-md-row align-items-center bg-white border-bottom box-shadow justify-content-between">
+    <div class="my-nav d-flex flex-md-row align-items-center bg-white box-shadow justify-content-between">
 
-        <a href="/" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal">
+        <a href="/" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal brand">
             <img src="/images/logo.png" class="my-logo">
         </a>
         <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
@@ -50,13 +51,13 @@
                 <a class="nav-link p-2 navbar-p navbar-option active" data-toggle="tab" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#menu1">Projects</a>
+                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#menu2">About</a>
+                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#menu3">Contact</a>
+                <a class="nav-link p-2 navbar-p navbar-option" data-toggle="tab" href="#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -66,13 +67,13 @@
                 <a class="sidebar-option active" data-toggle="tab" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="sidebar-option" data-toggle="tab" href="#menu1">Projects</a>
+                <a class="sidebar-option" data-toggle="tab" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="sidebar-option" data-toggle="tab" href="#menu2">About</a>
+                <a class="sidebar-option" data-toggle="tab" href="#about">About</a>
             </li>
             <li class="nav-item">
-                <a class="sidebar-option" data-toggle="tab" href="#menu3">Contact</a>
+                <a class="sidebar-option" data-toggle="tab" href="#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -80,11 +81,11 @@
     </div>
 
     <!-- Tab panes -->
-    <div class="tab-content">
-        <div id="home" class="tab-pane active"><br>
-            <div class="my-section">
+    <div class="tab-content my-content">
+        <div id="home" class="tab-pane active single-fold"><br>
+            <div class="my-section row home-section" style="height: 100%; padding-top: 0;">
                 <div class="row d-flex align-content-center flex-wrap home-section">
-                    <div class="col-md-5 d-flex align-items-center flex-column hero-section ">
+                    <div class="col-md-5 d-flex align-items-center flex-column hero-section">
                         <img src="images/hero.png" class="my-hero animated fadeIn ">
                     </div>
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
@@ -94,10 +95,8 @@
                     </div>
                 </div>
             </div>
-            <%include footer.ejs%>
-                <script src="javascripts/script.js"></script>
         </div>
-        <div id="menu1" class="tab-pane fade"><br>
+        <div id="project" class="tab-pane fade"><br>
 
             <div class="my-section">
 
@@ -134,14 +133,14 @@
 
                 </div>
             </div>
-            <%include footer.ejs%>
-                <script src="javascripts/script.js"></script>
+
 
         </div>
-        <div id="menu2" class="tab-pane fade"><br>
+        <div id="about" class="tab-pane fade"><br>
             <div class="my-section">
                 <div class="container text-center">
                     <h2 class="animated animated fadeIn title">About me</h2>
+                    <div id="mail-container"></div>
                 </div>
 
                 <div class="container d-flex justify-content-center avatar-section">
@@ -167,34 +166,35 @@
                     </div>
                 </div>
             </div>
-            <%include footer.ejs%>
-                <script src="javascripts/script.js"></script>
+
         </div>
-        <div id="menu3" class="tab-pane fade"><br>
-
-
-
-            <div class="my-section">
-                <div class="container text-center">
-                    <h2 class="animated animated fadeIn title">Contact</h2>
-                </div>
-                <div class="contact-section animated fadeIn delay-025s">
+        <div id="contact" class="tab-pane fade single-fold"><br>
+            <div class="my-section" style="height: 100%; padding-top: 0;">
+                <div class="contact-section animated fadeIn delay-025s justify-content-center align-content-center flex-wrap">
+                    <div id="mailContainer"></div>
                     <p class="contact">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>.
                         </br>Otherwise, check out my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
                         <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                     </p>
                 </div>
             </div>
-            <%include footer.ejs%>
 
-                <script src="javascripts/script.js"></script>
-                <script>
-                    $('#to-project-button').click(function(e) {
-                        e.preventDefault();
-                        $('.nav a[href="#menu1"]').tab('show');
-                    })
-                </script>
+            <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lottie.min.js'></script>
+            <script src="javascripts/script.js"></script>
+            <script>
+                /* Shapes */
+                var container = document.getElementById('mailContainer');
+                var animItem = bodymovin.loadAnimation({
+                    wrapper: container,
+                    animType: 'svg',
+                    loop: true,
+                    path: 'images/mail.json'
+                });
+            </script>
+
         </div>
+    </div>
+    <%include footer.ejs%>
 
 </body>
 
