--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -144,15 +144,15 @@
                 </div>
 
                 <div class="container d-flex justify-content-center avatar-section">
-                    <img src="images/about.png" class="my-hero animated fadeIn delay-025s">
+                    <img src="images/about.png" class="my-about animated fadeIn delay-025s">
                 </div>
 
-                <div class="container">
+                <div class="about-section">
                     <div class="row project-row ">
-                        <div class="col-md-6">
+                        <div class="col-md-6 about-col">
                             <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
                         </div>
-                        <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s">
+                        <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s about-col">
                             <p>Hi, I’m
                                 <span class="green">Truong Quoc Dat</span>.
                             </p>
