--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -83,7 +83,7 @@
     <!-- Tab panes -->
     <div class="tab-content my-content">
         <div id="home" class="tab-pane active single-fold"><br>
-            <div class="my-section row home-section" style="height: 100%; padding-top: 0;">
+            <div class="my-section row home-section" style="height: 100%;">
                 <div class="row d-flex align-content-center flex-wrap home-section">
                     <div class="col-md-5 d-flex align-items-center flex-column hero-section">
                         <img src="images/hero.png" class="my-hero animated fadeIn ">
