--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -89,7 +89,7 @@
                         <img src="images/hero.png" class="my-hero animated fadeIn ">
                     </div>
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
-                        <h1 class="last-name animated fadeInUp d-flex">TRUONG</h1>
+                        <h1 class="last-name animated fadeInUp">TRUONG</h1>
                         <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC DAT</h1>
                         <a href="" class="my-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my projects</a>
                     </div>
