--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -13,6 +13,8 @@
 
     <title>Dat Truong</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
+    <link rel="preload" href="images/home.json" as="fetch">
+    <link rel="preload" href="images/mail.json" as="fetch">
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
     <link rel="preload" as="image" href="images/about.png">
